# NewsFrontier

./: .env.template  .gitignore  .vimrc.lua  DEPLOYMENT_GUIDE.md  ENHANCED_ENCRYPTION_IMPLEMENTATION.md  FINAL_IMPLEMENTATION_SUMMARY.md  docker-compose.yml  pyproject.toml  readme.md  readme_zh.md  requirements-enhanced.txt  shell.nix  test_crypto_only.py  test_encryption.py
backend/: Dockerfile  README.md  admin_settings_api.py  main.py  pyproject.toml  test_api.py  text_processor.py
frontend/: Dockerfile  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/public/: back.avif
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/dashboard/article/[id]/: page.tsx
frontend/src/app/dashboard/articles/: page.tsx
frontend/src/app/dashboard/clusters/[id]/: page.tsx
frontend/src/app/dashboard/settings/: page.tsx
frontend/src/app/dashboard/topics/: page.tsx
frontend/src/app/dashboard/topics/[id]/: page.tsx
frontend/src/components/: DatePickerCalendar.tsx  DebugModal.tsx  ErrorBoundary.tsx  ListItem.tsx  ListView.tsx  LoadingSpinner.tsx  Modal.tsx  SafeHtmlContent.tsx  Timeline.tsx
frontend/src/lib/: api-client.ts  auth-context.tsx  constants.ts  html-utils.ts  types.ts  utils.ts
lib/: pyproject.toml
lib/newsfrontier_lib/: __init__.py  config_service.py  crud.py  crypto.py  database.py  db_migrations.py  init_config.py  llm_client.py  llm_client_new.py  models.py  s3_client.py  s3_client_new.py  schemas.py  urls.py
postprocess/: Dockerfile  README.md  clustering_service.py  daily_summary_service.py  embedding_generator.py  image_generator.py  main.py  main_original.py  pyproject.toml  summary_generator.py
postprocess/test_prompts/: README.md  run_prompt_tests.sh  test_cluster_detection.py  test_cluster_detection_old.py  test_cover_image_generation.py  test_daily_summary.py  test_summary_creation.py
scraper/: Dockerfile  README.md  main.py  pyproject.toml
scripts/: .gitignore  README.md  __init__.py  config.json  create-test-users.py  db_dump_debug.py  db_manage.py  dev.sh  generate-init-sql.py  init.sql.template  latest_debug_restore.sql  pyproject.toml  stop-dev.sh
scripts/prompts/: cluster_detection.txt  cluster_detection_bak.txt  cover_image_generation.txt  daily_summary_system.txt  summary_creation.txt
