[project]
name = "newsfrontier"
version = "0.1.0"
description = "NewsFrontier news aggregation platform"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []

[tool.uv.workspace]
members = [
    "lib",
    "backend", 
    "scraper",
    "postprocess",
    "scripts"
]

[tool.uv]
dev-dependencies = []
