[project]
name = "newsfrontier"
version = "0.1.0"
description = "NewsFrontier news aggregation platform"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=45.0.6",
    "jsonschema>=4.25.1",
    "litellm>=1.76.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = []
skip-excluded-dirs = true
only-include = ["*.md"]

[tool.uv.workspace]
members = [
    "lib",
    "backend", 
    "scraper",
    "postprocess",
    "scripts"
]

[tool.uv]
dev-dependencies = []
