[project]
name = "newsfrontier-backend"
version = "0.1.0"
description = "NewsFrontier backend API server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyjwt>=2.10.1",
    "nltk>=3.8.0",
    "newsfrontier-lib",
    "google-generativeai>=0.3.0",
    "boto3>=1.40.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "requests>=2.31.0",
]

[tool.uv.sources]
newsfrontier-lib = { workspace = true }
