[project]
name = "newsfrontier-lib"
version = "0.1.0"
description = "Shared library for NewsFrontier project"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pgvector>=0.3.0",
    "pydantic>=2.5.0",
    "python-dateutil>=2.8.0",
    "google-generativeai>=0.3.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "google-genai>=1.29.0",
    "cryptography>=41.0.0",
    "litellm>=1.40.0",
    "httpx>=0.24.0",
    "jsonschema>=4.0.0",
    "email-validator>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["newsfrontier_lib"]
