[project]
name = "newsfrontier-postprocess"
version = "0.1.0"
description = "NewsFrontier AI post-processing service"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.7",
    "google-generativeai>=0.3.0",
    "tiktoken>=0.5.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "python-dateutil>=2.8.2",
    "schedule>=1.2.0",
    "pydantic[email]>=2.5.0",
    "pgvector>=0.4.1",
    "newsfrontier-lib",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "boto3>=1.40.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]

[tool.uv.sources]
newsfrontier-lib = { workspace = true }
