[project]
name = "newsfrontier-scraper"
version = "0.1.0"
description = "NewsFrontier RSS scraper service"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "feedparser>=6.0.10",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.7",
    "python-dateutil>=2.8.2",
    "schedule>=1.2.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
]